# openptt

./: .cvsignore  ANCESTOR  CHANGE  INSTALL  MAINTAINER  Makefile  Makefile.in  Makefile.inc.FreeBSD  Makefile.inc.Linux  README  TODO  VERSION  configure  configure.ac  download.html  index.shtml  openptt.css  pttbbs.conf.sample
bbsd/: .cvsignore  Makefile  bbsd.c  daemon.c  proto.h  struct.h
doc/: INSTALL
docs/: CHANGE  INSTALL  UPGRADE
include/: .cvsignore  common.h  config.h  modes.h  perm.h  proto.h  pttstruct.h  struct.h
innbbsd/: .cvsignore  Makefile  Makefile.in  antisplam.h  bbslib.c  bbslink.c  closeonexec.c  daemon.h  dbz.c  echobbslib.c  his.c  innbbsconf.h  inndchannel.c  receive_article.c  record.c
libptt/: .cvsignore  Makefile  announce.c  cache.c  mail.c  passwd.c  talk.c  user.c
mbbsd/: .cvsignore  Makefile  Makefile.in  admin.c  announce.c  args.c  bbcall.c  bbs.c  board.c  cache.c  cal.c  calendar.c  card.c  chat.c  chc_draw.c  chc_net.c  chc_play.c  chc_rule.c  chicken.c  dark.c  dice.c  edit.c  friend.c  gamble.c  gomo.c  gomo1.c  guess.c  indict.c  io.c  kaede.c  lovepaper.c  mail.c  mbbsd.c  menu.c  more.c  name.c  osdep.c  othello.c  page.c  passwd.c  (+18 more)
sample/: Makefile  Makefile.in  crontab  pttbbs.conf
util/: .cvsignore  BM_money.c  BM_money.sh  BM_money.shtpl  Makefile  Makefile.in  account.c  antispam.c  backpasswd.sh  backpasswd.shtpl  bbsmail.c  bbsrf.c  birth.c  bmda.c  buildir.c  countalldice.c  createbbs.c  cutpasswd.c  cvslog.sh  cvslog.shtpl  deluserfile.c  expire.c  horoscope.c  initbbs.c  inndBM.c  mailog.sh  mailog.shtpl  (+35 more)
(+14 files in other folders)
